// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`align 1`] = `
"<h1>Test align</h1>
<p>A simple paragraph</p>
<div class=\\"align-center\\"><p>A centered paragraph</p></div>
<p>a simple paragraph</p>
<div class=\\"align-right\\"><p>A right aligned paragraph</p></div>
<p>an other simple paragraph</p>
<p>A simple paragraph</p>
<div class=\\"align-center\\"><p>A centered paragraph</p></div>
<p>a simple paragraph</p>
<div class=\\"align-right\\"><p>A right aligned paragraph</p></div>
<p>an other simple paragraph</p>
<div class=\\"align-center\\"><p>A centered paragraph.</p><p>Containing two paragraph</p></div>
<p>an other simple paragraph</p>
<div class=\\"align-center\\"><p>A right aligned paragraph.</p><p>Containing two paragraph</p></div>
<p>an other simple paragraph</p>
<div class=\\"align-center\\"><p>A centered paragraph.</p><p>An other centered paragraph.</p></div>
<div class=\\"align-left\\"><p>left aligned</p></div>
<p>a simple paragraph</p>
<p>->A started block without end.</p>"
`;

exports[`align-custom-config 1`] = `
"<h1>Test align</h1>
<p>A simple paragraph</p>
<div class=\\"custom-center\\"><p>A centered paragraph</p></div>
<p>a simple paragraph</p>
<div class=\\"custom-right\\"><p>A right aligned paragraph</p></div>
<p>an other simple paragraph</p>
<p>A simple paragraph</p>
<div class=\\"custom-center\\"><p>A centered paragraph</p></div>
<p>a simple paragraph</p>
<div class=\\"custom-right\\"><p>A right aligned paragraph</p></div>
<p>an other simple paragraph</p>
<div class=\\"custom-center\\"><p>A centered paragraph.</p><p>Containing two paragraph</p></div>
<p>an other simple paragraph</p>
<div class=\\"custom-center\\"><p>A right aligned paragraph.</p><p>Containing two paragraph</p></div>
<p>an other simple paragraph</p>
<div class=\\"custom-center\\"><p>A centered paragraph.</p><p>An other centered paragraph.</p></div>
<div class=\\"align-left\\"><p>left aligned</p></div>
<p>a simple paragraph</p>
<p>->A started block without end.</p>"
`;

exports[`align-custom-config 2`] = `
"<h1>Test align</h1>
<p>A simple paragraph</p>
<div class=\\"custom-center\\"><p>A centered paragraph</p></div>
<p>a simple paragraph</p>
<div class=\\"custom-right\\"><p>A right aligned paragraph</p></div>
<p>an other simple paragraph</p>
<p>A simple paragraph</p>
<div class=\\"custom-center\\"><p>A centered paragraph</p></div>
<p>a simple paragraph</p>
<div class=\\"custom-right\\"><p>A right aligned paragraph</p></div>
<p>an other simple paragraph</p>
<div class=\\"custom-center\\"><p>A centered paragraph.</p><p>Containing two paragraph</p></div>
<p>an other simple paragraph</p>
<div class=\\"custom-center\\"><p>A right aligned paragraph.</p><p>Containing two paragraph</p></div>
<p>an other simple paragraph</p>
<div class=\\"custom-center\\"><p>A centered paragraph.</p><p>An other centered paragraph.</p></div>
<div class=\\"custom-left\\"><p>left aligned</p></div>
<p>a simple paragraph</p>
<p>->A started block without end.</p>"
`;

exports[`block-wrap 1`] = `
"<h1>wraps blocks e.g. title:</h1>
<div class=\\"align-right\\"><p> foo</p><h1>title</h1><p>foo </p></div>"
`;

exports[`center-no-start 1`] = `
"<h1>title</h1>
<p>foo &#x3C;-</p>
<h1>title</h1>"
`;

exports[`compiles to markdown 1`] = `
"# title

<- foo <-

# title

-> **foo** <-

-> ![img](src) ->

# wraps blocks e.g. title:

->
foo

# title

foo
->
"
`;

exports[`escapable 1`] = `
"<h1>title</h1>
<div class=\\"align-center\\"><p>foo
->escaped-in</p></div>
<p>->escaped-out</p>
<div class=\\"align-center\\"><p>center</p></div>"
`;

exports[`left align 1`] = `
"<h1>title</h1>
<div class=\\"align-left\\"><p> foo </p></div>
<h1>title</h1>"
`;

exports[`list-block 1`] = `
"<h1>title</h1>
<div class=\\"align-right\\"><ul>
<li>a</li>
<li>b</li>
</ul></div>
<div class=\\"align-center\\"><ul>
<li>c</li>
<li>d</li>
</ul></div>"
`;

exports[`no content 1`] = `
"<div class=\\"align-left\\"></div>
<div class=\\"align-left\\"></div>
<div class=\\"align-center\\"></div>
<div class=\\"align-center\\"></div>
<div class=\\"align-center\\"></div>
<div class=\\"align-right\\"></div>
<div class=\\"align-right\\"></div>
<div class=\\"align-right\\"></div>
<div class=\\"align-right\\"></div>"
`;

exports[`right-no-end 1`] = `
"<h1>title</h1>
<p>-> foo</p>
<h1>title</h1>"
`;

exports[`right-no-start 1`] = `
"<h1>title</h1>
<p>foo -></p>
<h1>title</h1>"
`;
